# cli

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  bunfig.toml  dops_bootstrap.py  package.json  publish-new-version.sh  pyproject.toml  tsconfig.json  wrangler.jsonc
.github/workflows/: ci.yml  deploy-installer-worker.yml  release.yml
dops/: __main__.py  _version.py  api_client.py  argparse_utils.py  auth.py  auth_trigger.py  cli.py  commands.py  config.py  fileio.py  git.py  http.py  installer.py  manifest.py  mcp_inspect.py  platforms.py  resources.py  runtime.py  text_utils.py  tls.py  ui.py
dops/command_groups/: __init__.py  auth.py  config_command.py  decisions.py  operations.py  platforms.py  repo.py  shared.py  update.py
dops/installers/: __init__.py  templates.py
install/: install.ps1  install.sh
schemas/: constraints-and-rules.schema.json  decision-ops-api.schema.json  decision-schemas.schema.json  governance.schema.json
scripts/: check_code_quality.py  generate_models.py  sync_schemas.py
src/: cli.ts  types.ts
src/__tests__/: api-client.test.ts  auth.test.ts  cancel.test.ts  cli.test.ts  config.test.ts  installer.test.ts  installers.test.ts  manifest.test.ts  platforms.test.ts  resources.test.ts  (+1 more)
tests/: test_api_client.py  test_auth.py  test_auth_trigger.py  test_bootstrap.py  test_cli.py  test_config.py  test_fileio.py  test_git.py  test_http.py  test_installer.py  test_installer_templates.py  test_mcp_inspect.py  test_oauth_discovery.py  test_operations.py  test_platforms.py  test_repo.py  test_resources.py  test_tls.py  test_ui.py  test_update.py  test_update_resolution.py  test_version.py
(+33 files in other folders)
