[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "decisionops-dops"
version = "0.1.16"
description = "dops — repo-anchored CLI for working with decisions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "certifi>=2024.8.30",
  "prompt-toolkit>=3.0.51",
  "rich>=14.0.0",
]

[project.scripts]
dops = "dops.cli:main"

[tool.setuptools.packages.find]
include = ["dops*"]
